@@ -1,3 +1,10 @@
+2009-02-03  Lars Hartmann  <lars (at) chaotika (dot) org>
+
+	Updated liblpatom to a Object based model:
+	* lib/liblpatom.c (lpatom_parse): fixed memleak.
+	(lpatom_parse): does now return an int.
+	(lpatom_destroy): introduced object based model.
+
 2009-02-02  Lars Hartmann  <lars (at) chaotika (dot) org>
 
 	Updated liblpatom to a Object based model:
